--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 
-server.port = 8080
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:8889/ICworkspace
-spring.datasource.username=root
-spring.datasource.password=root
-
-
-#spring.datasource.url=jdbc:mariadb://localhost:3306/icworkspace
-#spring.datasource.username=icwsuser
-#spring.datasource.password=pAs00223
-#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#server.port = 8080
 #spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:8889/ICworkspace
+#spring.datasource.username=root
+#spring.datasource.password=root
+
+
+spring.datasource.url=jdbc:mariadb://localhost:3306/icworkspace
+spring.datasource.username=icwsuser
+spring.datasource.password=pAs00223
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
 
 
 #server.error.whitelabel.enabled=false
